--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron TypeScript App</title>
+    <title>Your React App</title>
 </head>
 <body>
-<h1>Hello from Electron with TypeScript!</h1>
-<script src="renderer.ts"></script>
+<div id="root"></div>
+<script type="module" src="./index.tsx"></script>
 </body>
 </html>
